--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,10 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/aqy?allowMultiQuries=true&autoReconnect=true&failOverReadOnly=false&serverTimeZone=Asia/ShangHai
+    url: jdbc:mysql://localhost:3306/aqy?allowMultiQuries=true&autoReconnect=true&failOverReadOnly=false&serverTimezone=Asia/Shanghai
     username: admin
-    password: root
+    password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+# 关联了 GraphQLController
+graphql:
+  url: /local
