完成多个schema同时加载多个的方法以及测试

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,6 +5,28 @@ spring:
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+logging:
+  level:
+    graphql:
+      spring:
+        web:
+          servlet: debug
+    web: debug
+    com:
+      example:
+        javagraphqlapi:
+          dao: debug
+      mysql: debug
+    org:
+      springframework:
+        jdbc: debug
+      apache:
+        ibatis: debug
+      mybatis:
+        spring: debug
+
+
+
 # 关联了 GraphQLController
 graphql:
   url: /local
